<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarm.alarm_seetings.AlarmSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/scrollPage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_addTrip">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_basic_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/alarm_description"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/alarm_description">

                                    <requestFocus />
                                </com.google.android.material.textfield.TextInputEditText>
                            </com.google.android.material.textfield.TextInputLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/layout_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:padding="8dp"
                                app:layout_constraintTop_toBottomOf="@+id/textp">

                                <ImageView
                                    android:id="@+id/btn_date"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/calendar"
                                    app:layout_constraintStart_toStartOf="parent"
                                    tools:ignore="MissingConstraints" />

                                <TextView
                                    android:id="@+id/tv_date_label"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:text="@string/alarm_date"
                                    app:layout_constraintBottom_toBottomOf="@+id/btn_date"
                                    app:layout_constraintStart_toEndOf="@+id/btn_date"
                                    app:layout_constraintTop_toTopOf="@+id/btn_date" />

                                <TextView
                                    android:id="@+id/txt_date"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    app:layout_constraintBottom_toBottomOf="@+id/tv_date_label"
                                    app:layout_constraintStart_toEndOf="@+id/tv_date_label"
                                    app:layout_constraintTop_toTopOf="@+id/tv_date_label" />


                                <ImageView
                                    android:id="@+id/btn_time"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/clock"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="@+id/txt_date"
                                    app:layout_constraintTop_toTopOf="parent" />

                                    <TextView
                                        android:id="@+id/tv_time_label"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:layout_marginTop="8dp"
                                        android:layout_marginBottom="8dp"
                                        android:text="@string/alarm_time"
                                        app:layout_constraintBottom_toBottomOf="@+id/btn_time"
                                        app:layout_constraintStart_toEndOf="@+id/btn_time"
                                        app:layout_constraintTop_toTopOf="@+id/btn_time" />

                                    <TextView
                                        android:id="@+id/txt_time"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="8dp"
                                        android:gravity="right"
                                        app:layout_constraintBottom_toBottomOf="@+id/tv_time_label"
                                        app:layout_constraintStart_toEndOf="@+id/tv_time_label"
                                        app:layout_constraintTop_toTopOf="@+id/tv_time_label" />
                            </androidx.constraintlayout.widget.ConstraintLayout>


                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"

                        app:layout_constraintTop_toBottomOf="@+id/cv_basic_info"
                        tools:ignore="MissingConstraints">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp">

                            <Switch
                                android:id="@+id/repeat_switch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:checked="false"
                                android:text="@string/alarm_weather_case"
                                android:textOff="OFF"
                                android:textOn="ON"
                                tools:ignore="UseSwitchCompatOrMaterialXml" />

                            <RadioGroup
                                android:id="@+id/radio_group"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="8dp"
                                android:visibility="gone"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/repeat_switch">

                                <RadioButton
                                    android:id="@+id/radio_btn_rain"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/alarm_rain" />

                                <RadioButton
                                    android:id="@+id/radio_btn_temp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/alarm_temp" />

                                <RadioButton
                                    android:id="@+id/radio_btn_wind"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/alarm_wind" />

                                <RadioButton
                                    android:id="@+id/radio_btn_fog"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/alarm_fog" />

                                <RadioButton
                                    android:id="@+id/radio_btn_Snow"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/alarm_snow" />

                                <RadioButton
                                    android:id="@+id/radio_btn_cloud"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/alarm_cloud" />

                                <RadioButton
                                    android:id="@+id/radio_btn_Thunderstorm"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/alarm_thunderstorm" />

                            </RadioGroup>

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_addAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/material_blue"
                android:gravity="center_horizontal"
                android:text="@string/AddAlarm" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>