<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/rootView"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@color/colorPrimary"
android:fitsSystemWindows="true"
tools:context=".ui.design.DetailsFragment">

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    android:layout_marginTop="100dp"

    android:layout_width="match_parent"
    android:layout_height="380dp"
   >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="0dp"
        android:backgroundTint="@color/orange"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:borderWidth="0dp"
        app:layout_anchor="@id/cardView_details"
        app:layout_anchorGravity="center_horizontal|top"
        app:useCompatPadding="true" />




    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="-32dp"
        android:transitionName="kkkk"
        app:cardBackgroundColor="@color/material_blue"
        app:cardCornerRadius="24dp"
        tools:backgroundTint="@color/material_blue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">


            <TextView
                android:id="@+id/textView_temperature"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:text="27"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_condition_icon"

                app:layout_constraintStart_toEndOf="@+id/date"
                app:layout_constraintTop_toTopOf="@+id/imageView_condition_icon"
                app:layout_constraintVertical_bias="0.573">

            </TextView>

            <TextView
                android:id="@+id/tvCity1"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="44dp"
                android:text="@string/cityName"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="8/3/2021"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_temperature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView_temperature" />

            <TextView
                android:id="@+id/textView_condition1"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="discription"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_temperature" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/weather_humidity"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_condition1" />

            <TextView
                android:id="@+id/textView_humidity"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/weather_wind"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView_wind"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:gravity="center"
                android:text="@string/weather_presuure"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView_humidity"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView_pressure"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weather_visibility"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView_visibility"
                style="@style/TextViewInColoredCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />


            <ImageView
                android:id="@+id/imageView_condition_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.255"
                app:srcCompat="@drawable/ic_mostly_cloudy" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>